<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mdickson972.androidActivities.LoginScreen" >
 
    <EditText
        android:id="@+id/login_username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:background="#00000000"
        android:gravity="top|center"
        android:hint="@string/username_label"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="28sp" >
 
        <requestFocus />
    </EditText>
     
    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_above="@+id/login_register_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/signin_green"
        android:text="@string/signIn_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
 
    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/register_green"
        android:text="@string/register_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
 
    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/login_username_field"
        android:layout_below="@+id/login_username_field"
        android:layout_marginTop="17dp"
        android:background="#00000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="28sp" />

    <Button
        android:id="@+id/forgotPass_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signIn_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="#00000000"
        android:gravity="center"
        android:text="@string/Forgot_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/login_javability_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_username_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/login_logo_image_view"
        android:src="@drawable/javability_main_logo" />
 
</RelativeLayout>