<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Password Change Items -->

    <Button
        android:id="@+id/user_details_change_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_details_home_btn"
        android:layout_alignBottom="@+id/user_details_home_btn"
        android:layout_marginStart="25dp"
        android:background="@drawable/user_details_btn_change_password"
        android:visibility="visible" />

    <Button
        android:id="@+id/user_details_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_toEndOf="@+id/user_details_change_password_btn"
        android:background="@drawable/results_btn_home" />

    <EditText
        android:id="@+id/user_details_confirm_new_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_details_change_password_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/user_details_repeat_new_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="invisible" />
    
    <!-- User Details Items -->

    <TextView
        android:id="@+id/user_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/user_details_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/user_details_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/user_details_user_id"
        android:ems="10" />
    
    <TextView
        android:id="@+id/user_details_user_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_user_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:text="@string/user_details_placeholder"
        android:ems="10" />
    
    <TextView
        android:id="@+id/user_details_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_user_id_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/user_details_username"
        android:ems="10" />
    
    <TextView
        android:id="@+id/user_details_username_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="textEnd"
        android:text="@string/user_details_placeholder"
        android:ems="10" />
    
    <TextView
        android:id="@+id/user_details_emailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_username_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/user_details_emailaddress"
        android:ems="10" />
    
    <TextView
        android:id="@+id/user_details_emailaddress_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_emailaddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="textEnd"
        android:text="@string/user_details_placeholder"
        android:ems="10" />

    <EditText
        android:id="@+id/user_details_current_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_details_new_password_field"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/user_details_confirm_new_password_field"
        android:layout_marginBottom="16dp"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/user_details_current_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/user_details_new_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_details_confirm_new_password_field"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/user_details_confirm_new_password_field"
        android:layout_marginBottom="18dp"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/user_details_new_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

</RelativeLayout>