<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_green" >
    
    <TextView
        android:id="@+id/forgot_password_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="98dp"
        android:gravity="center"
        android:text="@string/forgot_password_instructions"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/forgot_email_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/forgot_password_instructions"
        android:layout_alignStart="@+id/forgot_password_instructions"
        android:layout_below="@+id/forgot_password_instructions"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/forgot_password_email_label"
        android:inputType="textEmailAddress"
        android:background="#00000000"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/forgot_password_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/register_green"
        android:text="@string/forgot_password_sendEmail"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"/>

</RelativeLayout>
